0.12
- updated TODO
- changes in P4A_Frame, when viewed by an handheld no divs are generated and all elements float left (Pocket IE seems to not support floats)
- optimized P4A_Table_Navigation_Bar output for handhelds
- bugfix in P4A_Table_Navigation_Bar::addButton(), now margins are correct
- code cleanup
- removed some obsolete files
- handheld css change: now mask's title is centered
- handheld css change: now fieldset' title is centered
- handheld css change: now table's width is forced to 100% to avoid Pocket IE problem

0.11
- bugfix in MySQL Manager
- navigation bar bugfix in P4A_Table
- print css bugfix
- moved some inline css to external files
- output HTML optimizations

0.10
- moved some locale files, now ru_RU.CP121 and ru_RU.KOI8-R work again
- bugfix in getAsFile method in P4A_FIELD
- bugfix in saveRow method in P4A_DB_SOURCE
- bugfix in getAsDate method in P4A_FIELD
- null value bugfix in saveRow method on P4A_DB_SOURCE
- improved check_configuration library

0.9
- all javascript moved in p4a.js, the default form is now named "p4a"
- fixed a bug in mask default template, no javascript was included
- added the ability to detect handheld devices (a browser that does not support css2 is considered handheld)
- new library (phpSniff) to detect Internet Explorer
- optimized output HTML, cleaner and lighter

0.8
- changed P4A_MESSAGE layout
- fixed fieldset ie bug
- fixed deleteRow method on P4A_DATA_SOURCE
- fixed screen.css in default theme
- fixed anchorCenter bug in P4A_FRAME
- fixed anchorCenter bug in P4A_FIELDSET
- fixed an error P4A_FIELD::setNewValue that prevented the system from handling 0 as numeric value

0.7
- code cleanup
- added P4A_Navigation_Toolbar, a new default toolbar with "first", "prev", "next", "last", "exit" buttons
- updated TODO
- various bugfixes

0.6
- renamed changelog to CHANGELOG
- added TODO file
- added setlocale(LC_NUMERIC, "C") to avoid php 4.3.10 problems with numeric locales